Fixes up spacing issues around place name and changes the map icon color

--- a/src/components/MediaItem/MediaItem.css
+++ b/src/components/MediaItem/MediaItem.css
@@ -50,6 +50,7 @@
 
 .MediaItem__place_name {
   display: inline;
+  margin: 0 0 0 5px;
 }
 
 .MediaItem__spinner {
